Add slides in homepage

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,10 +1,12 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880FF;
+  --ion-color-primary: #64AE0F;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -12,7 +14,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #26A69A;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -36,7 +38,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-success-tint: #42d77d;
 
   /** warning **/
-  --ion-color-warning: #ffc409;
+  --ion-color-warning:  #f1bb52;
   --ion-color-warning-rgb: 255, 196, 9;
   --ion-color-warning-contrast: #000000;
   --ion-color-warning-contrast-rgb: 0, 0, 0;
@@ -74,6 +76,35 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /* add new  */
+  --ion-color-accent: #FFD600;
+  --ion-color-positive: #21BA45;
+  --ion-color-negative: #C10015;
+  --ion-color-grey: #9e9e9e;
+  --ion-color-info: #f6ffec;
+  --ion-color-dark: #062E26;
+
+}
+
+/* add new class color */
+.ion-color-accent {
+  --ion-color-base: var(--ion-color-accent);
+}
+.ion-color-positive {
+  --ion-color-base: var(--ion-color-positive);
+}
+.ion-color-negative {
+  --ion-color-base: var(--ion-color-negative);
+}
+.ion-color-grey {
+  --ion-color-base: var(--ion-color-grey);
+}
+.ion-color-info {
+  --ion-color-base: var(--ion-color-info);
+}
+.ion-color-dark {
+  --ion-color-base: var(--ion-color-dark);
 }
 
 @media (prefers-color-scheme: dark) {
